welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: Missing closing brace `}' assumed here
}
^ColumnByColumn:5: error: expected class or object definition
def positionFinale(a:Int, b:Int):Boolean = {
^